--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,32 @@
-config 
-  info:main branch, SpringCloud-Config/condig-dev.yml version=1
+server:
+  port: 8002
+
+spring:
+  application:
+    name: cloud-provider-payment
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
+    driver-class-name: com.mysql.jdbc.Driver              # mysql驱动包
+    url: jdbc:mysql://localhost:3317/Cloud_DB
+    username: root
+    password: root
+
+eureka:
+  client:
+    #表示是否将自己注册进EurekaServer默认为true。
+    register-with-eureka: true
+    #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka
+  instance:
+    instance-id: 生产者-8002
+    prefer-ip-address: true #默认为 false
+    # Eureka客户端向服务端发送心跳的时间间隔
+    lease-renewal-interval-in-seconds: 1 #单位为秒 (默认是30秒)
+    # Eureka服务端在收到最后一次心跳后等待的时间间隔上限 超时将被剔除服务
+    lease-expiration-duration-in-seconds: 20  #单位为秒 (默认是90秒)
+
+mybatis:
+  mapperLocations: classpath:mapper/*.xml
+  type-aliases-package: com.ex20.entities    # 所有Entity别名类所在包
